--- a/timeline/templates/photo_upload.html
+++ b/timeline/templates/photo_upload.html
@@ -13,7 +13,7 @@
 					<h1>New Photo</h1>
 
 					<form method='POST' action='' enctype='multipart/form-data'>{% csrf_token %}
-						{{ form | crispy }}
+						{{ form.as_p }}
 						<br/>
 						<input type='submit' class='btn btn-block btn-lg btn-dark' value='Upload' />
 					</form>
